Up to Step 2, First cell

--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "4                 1       23000            0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,8 +159,7 @@
     "lending_df = pd.read_csv(Path(\"/Users/GURU/Desktop/credit-risk-classification/Credit_Risk/lending_data.csv\"))\n",
     "\n",
     "# Review the DataFrame\n",
-    "lending_df.head()\n",
-    "\n"
+    "lending_df.head()"
    ]
   },
   {
@@ -173,17 +172,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y data (labels):\n",
+      "[0 0 0 0 0 0 0 0 0 0]\n"
+     ]
+    }
+   ],
    "source": [
     "# Separate the data into labels and features\n",
     "\n",
-    "# Separate the y variable, the labels\n",
-    "# YOUR CODE HERE!]\n",
+    "# Separate the y variable, the labels   \n",
+    "y = lending_df[\"loan_status\"].to_numpy()\n",
     "\n",
     "# Separate the X variable, the features\n",
-    "# YOUR CODE HERE!"
+    "x = lending_df.drop(columns=\"loan_status\", axis=1)\n",
+    "\n",
+    "print(\"y data (labels):\")\n",
+    "print(y[0:10])  # Print the first 10 labels"
    ]
   },
   {
