--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "4                 1       23000            0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,47 +174,169 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Separate the data into labels and features\n",
+    "#A value of 0 in the “loan_status” column means that the loan is healthy. \n",
+    "#A value of 1 means that the loan has a high risk of defaulting.\n",
+    "# Separate the y variable, the labels   \n",
+    "y = lending_df[\"loan_status\"].to_numpy() \n",
+    "\n",
+    "# Separate the x variable, the features\n",
+    "x = lending_df.drop(columns=\"loan_status\", axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y data (labels):\n",
-      "[0 0 0 0 0 0 0 0 0 0]\n"
+      "y data (labels):\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Separate the data into labels and features\n",
-    "\n",
-    "# Separate the y variable, the labels   \n",
-    "y = lending_df[\"loan_status\"].to_numpy()\n",
-    "\n",
-    "# Separate the X variable, the features\n",
-    "x = lending_df.drop(columns=\"loan_status\", axis=1)\n",
-    "\n",
-    "print(\"y data (labels):\")\n",
-    "print(y[0:10])  # Print the first 10 labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Review the y variable Series\n",
-    "# YOUR CODE HERE!"
+    "print(\"y data (labels):\")\n",
+    "y[0:10]                 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x data (features):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loan_size</th>\n",
+       "      <th>interest_rate</th>\n",
+       "      <th>borrower_income</th>\n",
+       "      <th>debt_to_income</th>\n",
+       "      <th>num_of_accounts</th>\n",
+       "      <th>derogatory_marks</th>\n",
+       "      <th>total_debt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10700.0</td>\n",
+       "      <td>7.672</td>\n",
+       "      <td>52800</td>\n",
+       "      <td>0.431818</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8400.0</td>\n",
+       "      <td>6.692</td>\n",
+       "      <td>43600</td>\n",
+       "      <td>0.311927</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9000.0</td>\n",
+       "      <td>6.963</td>\n",
+       "      <td>46100</td>\n",
+       "      <td>0.349241</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10700.0</td>\n",
+       "      <td>7.664</td>\n",
+       "      <td>52700</td>\n",
+       "      <td>0.430740</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10800.0</td>\n",
+       "      <td>7.698</td>\n",
+       "      <td>53000</td>\n",
+       "      <td>0.433962</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   loan_size  interest_rate  borrower_income  debt_to_income  num_of_accounts  \\\n",
+       "0    10700.0          7.672            52800        0.431818                5   \n",
+       "1     8400.0          6.692            43600        0.311927                3   \n",
+       "2     9000.0          6.963            46100        0.349241                3   \n",
+       "3    10700.0          7.664            52700        0.430740                5   \n",
+       "4    10800.0          7.698            53000        0.433962                5   \n",
+       "\n",
+       "   derogatory_marks  total_debt  \n",
+       "0                 1       22800  \n",
+       "1                 0       13600  \n",
+       "2                 0       16100  \n",
+       "3                 1       22700  \n",
+       "4                 1       23000  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Review the X variable DataFrame\n",
-    "# YOUR CODE HERE!"
+    "print(\"x data (features):\")\n",
+    "x.head()  # Print the first 5 rows of features"
    ]
   },
   {
