--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -937,8 +937,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Credit Risk Analysis Report"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +988,25 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** WRITE YOUR ANSWER HERE!"
+    "**Answer:** \n",
+    "### 0 Class (Healthy Loans)\n",
+    "- **100% precision**\n",
+    "- **99% recall**\n",
+    "  \n",
+    "\n",
+    "### 1 Class (High-Risk Loans)\n",
+    "- **85% precision**\n",
+    "- **91% recall**\n",
+    "\n",
+    "\n",
+    "### Imbalanced Dataset Issue\n",
+    "- Test data contains only **619 instances** of class 1 compared to **18,765 instances** for class 0.\n",
+    "\n",
+    "\n",
+    "### Overall Accuracy\n",
+    "- The model's overall accuracy is impressive at **99%**.\n",
+    "\n",
+    "__While the model performs very well overall, there is room for improvement in predicting high-risk loans due to the imbalance in the dataset.__\n"
    ]
   },
   {
